--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
